# uvavps_projekt

./: .gitignore  README.md  ai_script.py  main.py  pyproject.toml  questions.csv  res_corrector.py  res_google-gemma-3-12b.csv  res_google-gemma-3n-e4b.csv  res_google-gemma-4-26b-a4b.csv  res_google-gemma-4-31b.csv  res_google-gemma-4-e2b.csv  res_google-gemma-4-e4b2.csv  res_llama-3.2-1b-instruct.csv  res_mistralai-ministral-3-3b.csv  res_nvidia-nemotron-3-nano-4b.csv  res_openai-gpt-oss-20b.csv  res_qwen-qwen3-1.7b.csv  res_qwen-qwen3-14b.csv  res_qwen-qwen3-4b.csv  res_qwen-qwen3-8b.csv  res_qwen-qwen3.5-9b.csv  res_qwen-qwen3.6-35b-a3b.csv  results.csv  sat_questions.csv  statistical_analysis.py  systemprompt copy.txt  systemprompt.txt  test.py
rerun/: res_qwen-qwen3-4b.csv  res_qwen-qwen3.5-35b-a3b.csv
