[project]
name = "uvavps-projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "tqdm>=4.67.3",
]
